<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="3sp"
        android:padding="3sp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1sp"
            android:orientation="vertical"
            android:padding="2sp">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DT"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iconDescription"
                android:textAlignment="center"
                app:srcCompat="@drawable/hail" />

            <TextView
                android:id="@+id/txtMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Min"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Max"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/WindSpeed"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>