<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2sp"
    android:screenOrientation="locked">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Location"
                android:textAlignment="viewEnd"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TDT"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iconDescription"
                app:srcCompat="@drawable/clear" />

            <TextView
                android:id="@+id/txtTempMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Max"
                android:textAlignment="center"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Description"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTempMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Min"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iconDescription"
                app:srcCompat="@drawable/sunrise" />

            <ImageView
                android:id="@+id/imgSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iconDescription"
                app:srcCompat="@drawable/sunset" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtrise"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Sunrise_amb"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtset"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Sunset_amb"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSunrise"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Sunrise"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtSunset"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Sunset"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iconDescription"
                app:srcCompat="@drawable/wind" />

            <ImageView
                android:id="@+id/imgHummidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iconDescription"
                app:srcCompat="@drawable/humidity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtwind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Wind_amb"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txthumid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Humidity_amb"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/WindSpeed"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtHumidity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Humidity"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>



</LinearLayout>